# zebrand-challenge

./: README.md
zebrand-backend/: .env.dist  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
zebrand-backend/.docker/: dockerfile
zebrand-backend/app/: main.py
zebrand-backend/app/domain/enums/: api_status.py
zebrand-backend/app/domain/exceptions/: service_exception.py
zebrand-backend/app/domain/responses/: api_response.py
zebrand-backend/app/domain/settings/: aws_settings.py  database_settings.py  security_settings.py
zebrand-backend/app/infraestructure/: casbin_middleware.py  database.py  logger.py  logging_middleware.py  rbac_policy.csv
zebrand-backend/app/product/api/: product_router.py
zebrand-backend/app/product/api/v1/: product_controller.py
zebrand-backend/app/product/domain/exceptions/: product_exception.py
zebrand-backend/app/product/domain/models/: product_model.py  product_track_view_model.py
zebrand-backend/app/product/domain/requests/: product_request.py
zebrand-backend/app/product/domain/responses/: product_response.py
zebrand-backend/app/product/domain/templates/: product_change_template.html  product_change_template.py
zebrand-backend/app/product/services/: product_service.py
zebrand-backend/app/product/use_cases/: product_notification_use_case.py  product_use_case.py
zebrand-backend/app/user/api/: user_router.py
zebrand-backend/app/user/services/: user_service.py
zebrand-backend/app/user/use_cases/: auth_use_case.py  user_use_case.py
zebrand-backend/tests/: conftest.py
(+19 files in other folders)
